--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "frontend": "cd frontend && npm start",
     "build": "cd frontend && npm run build",
     "install-all": "npm install && cd backend && npm install && cd ../frontend && npm install",
-    "vercel-build": "echo 'Building from frontend directory'",
+    "vercel-build": "cd frontend && npm ci && npm run vercel-build",
     "start": "node api/index.js"
   },
   "dependencies": {
