--- a/.env.example
+++ b/.env.example
@@ -21,8 +21,26 @@ CLOUDINARY_API_SECRET=your-cloudinary-api-secret
 STRIPE_SECRET_KEY=your-stripe-secret-key
 STRIPE_WEBHOOK_SECRET=your-stripe-webhook-secret
 
-# Email Configuration (optional)
-EMAIL_HOST=smtp.gmail.com
-EMAIL_PORT=587
+# Email Configuration
+# Set EMAIL_MOCK=true to mock emails in development (logs to console)
+# Set EMAIL_MOCK=false or remove to actually send emails
+EMAIL_MOCK=true
+
+# Gmail SMTP Configuration (Recommended)
+EMAIL_SERVICE=gmail
 EMAIL_USER=your-email@gmail.com
-EMAIL_PASS=your-email-password
+EMAIL_APP_PASSWORD=your-gmail-app-password-here
+EMAIL_FROM=NFC Business Card <your-email@gmail.com>
+
+# Alternative: Outlook/Hotmail SMTP
+# EMAIL_SERVICE=outlook
+# EMAIL_USER=your-email@hotmail.com
+# EMAIL_PASS=your-password
+
+# Alternative: Custom SMTP
+# EMAIL_SERVICE=custom
+# EMAIL_HOST=smtp.your-provider.com
+# EMAIL_PORT=587
+# EMAIL_SECURE=false
+# EMAIL_USER=your-email@domain.com
+# EMAIL_PASS=your-password
