--- a/package.json
+++ b/package.json
@@ -12,20 +12,21 @@
     "start": "node api/index.js"
   },
   "dependencies": {
-    "express": "^4.18.2",
-    "mongodb": "^6.3.0",
+    "bcryptjs": "^2.4.3",
+    "cloudinary": "^1.41.1",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
-    "bcryptjs": "^2.4.3",
-    "jsonwebtoken": "^9.0.2",
-    "multer": "^1.4.5-lts.1",
-    "cloudinary": "^1.41.1",
+    "express": "^4.18.2",
+    "express-rate-limit": "^7.1.5",
     "express-validator": "^7.0.1",
     "helmet": "^7.1.0",
-    "express-rate-limit": "^7.1.5",
+    "jsonwebtoken": "^9.0.2",
+    "mongodb": "^6.3.0",
+    "mongoose": "^8.20.1",
+    "multer": "^1.4.5-lts.1",
+    "nodemailer": "^6.9.7",
     "qrcode": "^1.5.3",
-    "stripe": "^14.10.0",
-    "nodemailer": "^6.9.7"
+    "stripe": "^14.10.0"
   },
   "devDependencies": {
     "concurrently": "^8.2.2",
